// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalMenu signed in user matches the snapshot 1`] = `
.c1 {
  height: 50px;
  width: 700px !important;
  position: relative !important;
}

.c0 {
  position: fixed;
  background-color: #1B1C1D;
  width: 100%;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="c0"
>
  <div
    class="ui borderless inverted top fixed c1 menu"
  >
    <a
      class="header item"
      href="/"
    >
      Ontohub
    </a>
    <div
      class="right menu"
    >
      <div
        aria-expanded="false"
        class="ui item dropdown"
        role="listbox"
        tabindex="0"
      >
        <span>
          <i
            aria-hidden="true"
            class="plus icon"
          >
            
          </i>
        </span>
        <i
          aria-hidden="true"
          class="dropdown icon"
        >
          
        </i>
        <div
          class="menu transition"
        >
          <div
            class="header"
          >
            Create new...
          </div>
          <a
            class="item"
            href="/new"
            role="option"
          >
            <span
              class="text"
            >
              Repository
            </span>
          </a>
          <a
            class="item"
            href="/organizations/new"
            role="option"
          >
            <span
              class="text"
            >
              Organization
            </span>
          </a>
        </div>
      </div>
      <div
        aria-expanded="false"
        class="ui item dropdown"
        role="listbox"
        tabindex="0"
      >
        <span>
          <img
            alt="Gravatar for undefined"
            class="react-gravatar"
            height="24"
            src="//www.gravatar.com/avatar/3e3417d7ef77d5932a6734b916515ed5?d=retro&r=g&s=24"
            srcset="//www.gravatar.com/avatar/3e3417d7ef77d5932a6734b916515ed5?d=retro&r=g&s=48 2x"
            style="border-radius:2px"
            width="24"
          >
            
          </img>
        </span>
        <i
          aria-hidden="true"
          class="dropdown icon"
        >
          
        </i>
        <div
          class="menu transition"
        >
          <div
            class="header"
          >
            Signed in as ada
          </div>
          <a
            class="item"
            href="/ada"
            role="option"
          >
            <span
              class="text"
            >
              Profile
            </span>
          </a>
          <div
            class="divider"
          >
            
          </div>
          <div
            class="item"
            id="global-menu-sign-out-button"
            role="option"
          >
            <span
              class="text"
            >
              Sign out
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GlobalMenu signed out user matches the snapshot 1`] = `
.c1 {
  height: 50px;
  width: 700px !important;
  position: relative !important;
}

.c0 {
  position: fixed;
  background-color: #1B1C1D;
  width: 100%;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="c0"
>
  <div
    class="ui borderless inverted top fixed c1 menu"
  >
    <a
      class="header item"
      href="/"
    >
      Ontohub
    </a>
    <div
      class="right menu"
    >
      <div
        class="item"
      >
        <button
          class="ui primary button"
          id="login-modal-sign-in-button"
          role="button"
        >
          <i
            aria-hidden="true"
            class="sign in icon"
          >
            
          </i>
          Sign in
        </button>
      </div>
    </div>
  </div>
</div>
`;
